peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Title_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Title_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Title Received Date</label>
    <type>Date</type>
</CustomField>