peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Title_Released_Attention__c.field-meta.xml
<CustomField>
    <fullName>Title_Released_Attention__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Title Released Attention</label>
    <length>100</length>
    <type>Text</type>
</CustomField>