peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Title_Released_Date__c.field-meta.xml
<CustomField>
    <fullName>Title_Released_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Title Released Date</label>
    <type>Date</type>
</CustomField>