peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Title_Released_State__c.field-meta.xml
<CustomField>
    <fullName>Title_Released_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Title Released State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>