peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Title_Released_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Title_Released_Zip_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Title Released Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>