peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Titled_Asset__c.field-meta.xml
<CustomField>
    <fullName>Titled_Asset__c</fullName>
    <label>Titled Asset</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>