peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Total_Meter_Read__c.field-meta.xml
<CustomField>
    <fullName>Total_Meter_Read__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Meter Read</label>
    <length>255</length>
    <type>Text</type>
</CustomField>