peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Total_Upfront_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Upfront_Tax_Amount__c</fullName>
    <label>Total Upfront Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>