peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unique ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>