peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Upfront_Location_County_Code__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Location_County_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Upfront Location County Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>