peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Upfront_Location_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Location_State_Code__c</fullName>
    <label>Upfront Location State Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALABAMA</fullName>
            </value>
            <value>
                <fullName>ALASKA</fullName>
            </value>
            <value>
                <fullName>ARIZONA</fullName>
            </value>
            <value>
                <fullName>ARKANSAS</fullName>
            </value>
            <value>
                <fullName>CALIFORNIA</fullName>
            </value>
            <value>
                <fullName>COLORADO</fullName>
            </value>
            <value>
                <fullName>CONNECTICUT</fullName>
            </value>
            <value>
                <fullName>DELAWARE</fullName>
            </value>
            <value>
                <fullName>DISTRICT OF COLUMBIA</fullName>
            </value>
            <value>
                <fullName>FLORIDA</fullName>
            </value>
            <value>
                <fullName>GEORGIA</fullName>
            </value>
            <value>
                <fullName>HAWAII</fullName>
            </value>
            <value>
                <fullName>IDAHO</fullName>
            </value>
            <value>
                <fullName>ILLINOIS</fullName>
            </value>
            <value>
                <fullName>INDIANA</fullName>
            </value>
            <value>
                <fullName>IOWA</fullName>
            </value>
            <value>
                <fullName>KANSAS</fullName>
            </value>
            <value>
                <fullName>KENTUCKY</fullName>
            </value>
            <value>
                <fullName>LOUISIANA</fullName>
            </value>
            <value>
                <fullName>MAINE</fullName>
            </value>
            <value>
                <fullName>MARYLAND</fullName>
            </value>
            <value>
                <fullName>MASSACHUSETTS</fullName>
            </value>
            <value>
                <fullName>MICHIGAN</fullName>
            </value>
            <value>
                <fullName>MINNESOTA</fullName>
            </value>
            <value>
                <fullName>MISSISSIPPI</fullName>
            </value>
            <value>
                <fullName>MISSOURI</fullName>
            </value>
            <value>
                <fullName>MONTANA</fullName>
            </value>
            <value>
                <fullName>NEBRASKA</fullName>
            </value>
            <value>
                <fullName>NEVADA</fullName>
            </value>
            <value>
                <fullName>NEW HAMPSHIRE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>