peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Upfront_Tax_Location__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Tax_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Upfront Tax Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>