peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Upfront_Tax_Zip__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Tax_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Upfront Tax Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>