peac_dev/force-app/main/default/objects/Contract_Asset__c/fields/Year_of_Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Manufacture__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Year of Manufacture</label>
    <length>80</length>
    <type>Text</type>
</CustomField>