peac_dev/force-app/main/default/objects/Contract_Asset__c/validationRules/Available_For_Sale.validationRule-meta.xml
<ValidationRule>
    <fullName>Available_For_Sale</fullName>
    <active>true</active>
    <errorConditionFormula>Equipment_Available_for_Sale_Date__c &lt; Equipment_Received_Date__c</errorConditionFormula>
    <errorDisplayField>Equipment_Available_for_Sale_Date__c</errorDisplayField>
    <errorMessage>Equipment available for sale date can’t be before Equipment received date!</errorMessage>
</ValidationRule>