peac_dev/force-app/main/default/objects/Contract_Asset__c/validationRules/Blank_Net_Proceeds.validationRule-meta.xml
<ValidationRule>
    <fullName>Blank_Net_Proceeds</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISBLANK(Net_Proceeds__c), ISPICKVAL(File_Upload__c, &apos;Proceeds&apos;))</errorConditionFormula>
    <errorDisplayField>Net_Proceeds__c</errorDisplayField>
    <errorMessage>Net Proceeds field can’t be empty!</errorMessage>
</ValidationRule>