peac_dev/force-app/main/default/objects/Contract_Asset__c/validationRules/Blank_Received_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Blank_Received_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Equipment_Received_Date__c),  ISPICKVAL(File_Upload__c, &apos;Condition&apos;))</errorConditionFormula>
    <errorDisplayField>Equipment_Received_Date__c</errorDisplayField>
    <errorMessage>Received date can&apos;t be empty when uploading a Condition file</errorMessage>
</ValidationRule>