peac_dev/force-app/main/default/objects/Contract_Asset__c/validationRules/Blank_Sales_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Blank_Sales_Price</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Net_Sale_Price__c), ISPICKVAL(File_Upload__c, &apos;Proceeds&apos;))</errorConditionFormula>
    <errorDisplayField>Net_Sale_Price__c</errorDisplayField>
    <errorMessage>Net Sale Price field can’t be empty!</errorMessage>
</ValidationRule>