peac_dev/force-app/main/default/objects/Contract_Asset__c/validationRules/Blank_SP_Partner_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>Blank_SP_Partner_Location</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(SP_Partner_Location__c),  ISPICKVAL(File_Upload__c, &apos;Condition&apos;))</errorConditionFormula>
    <errorDisplayField>SP_Partner_Location__c</errorDisplayField>
    <errorMessage>SP Partner Location can’t be empty when uploading a Condition file</errorMessage>
</ValidationRule>