peac_dev/force-app/main/default/objects/Contract_Asset__c/validationRules/Disposed_No_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Disposed_No_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status2__c, &apos;Disposed&apos;),  ISPICKVAL(File_Upload__c, &apos;Condition&apos;))</errorConditionFormula>
    <errorMessage>Asset disposed, No update performed</errorMessage>
</ValidationRule>