peac_dev/force-app/main/default/objects/Contract_Asset__c/validationRules/Empty_Serial_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Empty_Serial_Number</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Serial_Number__c), ISPICKVAL(File_Upload__c, &apos;Condition&apos;))</errorConditionFormula>
    <errorDisplayField>Serial_Number__c</errorDisplayField>
    <errorMessage>Serial_Number__c</errorMessage>
</ValidationRule>