peac_dev/force-app/main/default/objects/Contract_Asset__c/validationRules/Equipment_Recycled_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Equipment_Recycled_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Equipment_Recycled_Date__c &lt; Equipment_Received_Date__c</errorConditionFormula>
    <errorDisplayField>Equipment_Received_Date__c</errorDisplayField>
    <errorMessage>Equipment recycled date can’t be before Equipment received date!</errorMessage>
</ValidationRule>