peac_dev/force-app/main/default/objects/Contract_Asset__c/validationRules/Mfg_Make_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Mfg_Make_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( SP_Mfg_Make__c ),  ISPICKVAL(File_Upload__c, &apos;Condition&apos;))</errorConditionFormula>
    <errorDisplayField>SP_Mfg_Make__c</errorDisplayField>
    <errorMessage>SP Mfg/Make field can’t be empty.</errorMessage>
</ValidationRule>