peac_dev/force-app/main/default/objects/Contract_Asset__c/validationRules/Recycled_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Recycled_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Equipment_Recycled_Date__c &gt; Today()</errorConditionFormula>
    <errorDisplayField>Equipment_Recycled_Date__c</errorDisplayField>
    <errorMessage>Equipment recycle date can&apos;t be in future.</errorMessage>
</ValidationRule>