peac_dev/force-app/main/default/objects/Contract_Asset__c/validationRules/Sale_Date_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Sale_Date_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Sold__c  &gt; today()</errorConditionFormula>
    <errorDisplayField>Sold__c</errorDisplayField>
    <errorMessage>Equipment sale date can&apos;t be in future.</errorMessage>
</ValidationRule>