peac_dev/force-app/main/default/objects/Contract_Asset__c/validationRules/ServiceProvider_UpdateLoc.validationRule-meta.xml
<ValidationRule>
    <fullName>ServiceProvider_UpdateLoc</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND( ISCHANGED( Service_Provider__c ) , NOT( ISCHANGED( Location__c ) ) ), True, False)</errorConditionFormula>
    <errorMessage>Please update the Location to match your Service Provider</errorMessage>
</ValidationRule>