peac_dev/force-app/main/default/objects/Contract_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Asset_Number__c</columns>
    <columns>Contract__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Equipment_Description__c</columns>
    <columns>Insurance__c</columns>
    <columns>List_Price__c</columns>
    <columns>Equipment_Subtype__c</columns>
    <columns>Equipment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>