peac_dev/force-app/main/default/objects/Contract_Asset__c/listViews/Missing_Title_Packet_Documents.listView-meta.xml
<ListView>
    <fullName>Missing_Title_Packet_Documents</fullName>
    <columns>NAME</columns>
    <columns>Asset_Number__c</columns>
    <columns>Contract__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Equipment_Description__c</columns>
    <columns>Insurance__c</columns>
    <columns>List_Price__c</columns>
    <columns>Titled_Asset__c</columns>
    <filterScope>Everything</filterScope>
    <label>Missing Title Packet Documents</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>