peac_dev/force-app/main/default/objects/Contract_Asset__c/listViews/Update_Multiple_Assets_For_A_Contract.listView-meta.xml
<ListView>
    <fullName>Update_Multiple_Assets_For_A_Contract</fullName>
    <columns>NAME</columns>
    <columns>Asset_Code__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Lien_Date__c</columns>
    <columns>Model_Number__c</columns>
    <columns>Asset_Number__c</columns>
    <columns>Equipment_Description__c</columns>
    <columns>Status2__c</columns>
    <columns>Asset_Disposed_Date__c</columns>
    <columns>Asset_Disposition_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract__c</field>
        <operation>equals</operation>
        <value>101-0092804-002</value>
    </filters>
    <label>Update Multiple Assets on a Contract</label>
    <sharedTo>
        <role>Asset_Management</role>
    </sharedTo>
</ListView>